--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "framer-motion": "^4.1.2",
+    "immer": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "use-immer": "^0.5.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
