--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "elliptic": "^6.5.4",
     "framer-motion": "^4.1.2",
     "immer": "^8.0.1",
     "react": "^17.0.2",
