--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blockchain_view",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://swiftnextstep.github.io/blockchain-intro",
   "dependencies": {
     "@chakra-ui/icons": "^1.0.9",
     "@chakra-ui/react": "^1.4.2",
@@ -12,6 +13,7 @@
     "@testing-library/user-event": "^12.8.3",
     "elliptic": "^6.5.4",
     "framer-motion": "^4.1.2",
+    "gh-pages": "^3.1.0",
     "immer": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
